div 박스에 자주 쓰이는 속성, 스타일 상속

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 }
 
 /* 클래스셀렉터 */
-.name {
+.title {
   text-align: center;
   font-size: 16px;
 }
@@ -23,3 +23,24 @@ p {
 }
 
 /* 스타일이 겹칠 경우 우선순위따라 정해짐 id>class>tag (참고)인라인스타일 우선순위가 가장높다. */
+
+/* div 박스에 자주쓰이는 속성들 */
+/* <div>,<p>,<h> display:block 기본 */
+/* display:block이란? 가로행을 전부 차지하게해주세요 라는 뜻 */
+.box {
+  width: 200px;
+  background: cadetblue;
+  margin-left: 10px;
+  padding: 40px;
+  border: 4px solid black;
+  border-radius: 15px;
+
+  /* div 가운데 정렬 */
+  /* display: block; 생략 */
+  margin-left: auto;
+  margin-right: auto;
+
+  /* 일부 스타일은 inherit(상속)된다. */
+  font-size: 10px;
+  color: white;
+}
