--- a/css/my.css
+++ b/css/my.css
@@ -14,7 +14,7 @@ html {
   position: relative;
   width: 100%;
   height: 500px;
-  background-image: url(./img/\ freight.avif);
+  background-image: url(../img/\ freight.avif);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
