--- a/css/float.css
+++ b/css/float.css
@@ -5,6 +5,7 @@
 
 .header {
   /* 상대적인 크기 단위인 퍼센트 단위 */
+  /* 부모 태그 width의 100% */
   width: 100%;
   height: 50px;
   background: aquamarine;
@@ -15,10 +16,12 @@
   width: 20%;
   height: 400px;
   background: cornflowerblue;
+  /* 모든 <div>는 display:block 이기때문에 가로행 전부 차지 */
+  /* 요소를 붕 띄워서 왼쪽정렬 */
   float: left;
 }
 
-.right {
+.content {
   width: 80%;
   height: 400px;
   background: coral;
@@ -32,4 +35,6 @@
   background-color: grey;
   /* clear:both; float 다음에 오는 요소에게 주면 float로 발생하는 이상한 현상 해결가능 */
   clear: both;
+  /* float : none 이것도 추가해주는게 나중에 생길 버그예방차원에서도 좋을 수 있습니다.  */
+  float: none;
 }
