--- a/css/selector.css
+++ b/css/selector.css
@@ -1,7 +1,7 @@
-/* selector 문법 공백: ~안에있는 모든자식
- * selector 문법 >: ~안에있는 직계자식
+/* selector 문법 공백: ~안에있는 모든자식(자손)
+ * selector 문법 >: ~안에있는 직계자식(자식)
  */
-.navbar li {
+.navbar > li {
   display: inline-block;
   width: 60px;
   text-align: center;
@@ -12,9 +12,11 @@
 
 .navbar a {
   font-size: 16px;
+  /* a태그의 밑줄제거 가능 */
   text-decoration: none;
 }
 
+/* 방문 후 보라색되는것도 변경가능 */
 .link:visited {
   color: rgb(248, 248, 248);
 }
