--- a/css/background.css
+++ b/css/background.css
@@ -1,19 +1,42 @@
 .main-background {
   width: 100%;
   height: 500px;
-  background-image: url(../img/shoes.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  /* filter: brightness(70%) saturate(200%); */
-  /* margin collapse 현상 해결방법 => 패딩 주기  */
-  padding: 1px;
   text-align: center;
+  /* div 박스에 배경으로 이미지 넣을수 있음! */
+  /* ../ 상위폴더로 이동하라는 뜻 */
+  background-image: url(../img/shoes.jpg);
+
+  /* 배경 여러개 겹치기 */
+  /* background-image: url(../img/shoes.jpg), url(~~~); */
+
+  /* 백그라운드 사이즈 변경 */
+  /* background-size: 100%; */
+
+  /* 배경이미지는 꽉차지않으면 반복이됨 */
+  background-repeat: no-repeat;
+
+  /* 백그라운드 공백 발생 */
+  /* cover: 배경 짤려도 상관없으니 빈 공간 없이 배경으로 꽉꽉 채워라 */
+  /* contain: 배경이 짤리지 않아야 한다.*/
+  background-size: cover;
+
+  /* 배경 위치 조정 가능 */
+  background-position: center;
+
+  /* 스크롤시 배경 위치 조정가능 */
+  /* background-attachment: fixed; */
+
+  /* 박스에 보정입히기 */
+  /* filter: brightness(70%) saturate(200%); */
+
+  /* margin collapse 현상 해결방법 => 패딩 주기 (테두리 안붙게 한거임) */
+  padding: 1px;
 }
 
 .main-title {
   color: white;
   font-size: 40px;
+  /* margin collapse 현상 발생! (박스 2개 위쪽 테두리가 겹침 -> 이럴 경우 Margin도 합쳐짐) -> 테두리 안붙게하면됨 */
   margin-top: 100px;
 }
 
@@ -46,7 +69,7 @@
   width: ~~~;
   */
   position: relative;
-  top: 130px;
+  top: 100px;
   left: 300px;
 }
 
