--- a/css/background.css
+++ b/css/background.css
@@ -77,16 +77,26 @@
   margin-right: auto;
   width: 250px;
   /* left: 300px; */
+
+  /* z-index 공중에 떠있는 애들이 많으면 누가 맨 앞에 올지 지정해야한다.
+   * z-index 로 높으수록 앞에 온다.
+   */
+  z-index: 2;
 }
 
 .explain-box {
   background-color: lightgray;
+  margin: auto;
   padding: 10px;
   border-radius: 5px;
   text-align: center;
   width: 80%;
   max-width: 700px;
   position: relative;
-  top: -40px;
-  margin: auto;
+  top: -120px;
+
+  /* z-index 공중에 떠있는 애들이 많으면 누가 맨 앞에 올지 지정해야한다.
+   * z-index 로 높으수록 앞에 온다.
+   */
+  z-index: 1;
 }
